--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,8 +46,18 @@
     </servlet-mapping>
 <!--Stop spring mvc配置 -->
 
+<!--Start logback配置-->
+    <context-param>
+        <param-name>logbackConfigLocation</param-name>
+        <param-value>classpath:logback.xml</param-value>
+    </context-param>
 
-<!--Start 配置过滤器解决乱码 -->
+    <listener>
+        <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
+    </listener>
+<!--Stop logback配置-->
+
+    <!--Start 配置过滤器解决乱码 -->
     <filter>
         <filter-name>encoding</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -85,5 +95,17 @@
         <location>/WEB-INF/view/error/other.jsp</location>
     </error-page>
 <!--Stop 系统容错处理 -->
+
+    <!-- Shiro filter-->
+    <filter>
+        <filter-name>shiroFilter</filter-name>
+        <filter-class>
+            org.springframework.web.filter.DelegatingFilterProxy
+        </filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>shiroFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
 </web-app>
