--- a/pom.xml
+++ b/pom.xml
@@ -13,17 +13,20 @@
     <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
     <commons-lang.version>2.6</commons-lang.version>
     <spring.version>4.3.3.RELEASE</spring.version>
-    <jackson.version>2.8.6</jackson.version>
+    <jackson.version>2.7.4</jackson.version>
     <junit.version>4.12</junit.version>
-    <slf4j.version>1.7.6</slf4j.version>
+    <slf4j.version>1.7.21</slf4j.version>
     <mybatis-spring.version>1.3.0</mybatis-spring.version>
     <mybatis.version>3.4.4</mybatis.version>
-    <spring-redis.version>1.7.2.RELEASE</spring-redis.version>
+    <!--<spring-redis.version>1.7.2.RELEASE</spring-redis.version>-->
     <pagehelper.version>5.1.2</pagehelper.version>
     <mysql-connector.version>5.1.38</mysql-connector.version>
     <fastjson.version>1.2.17</fastjson.version>
     <c3p0.version>0.9.5.2</c3p0.version>
-    <hadoop.version>2.7.5</hadoop.version>
+    <hadoop.version>2.4.1</hadoop.version>
+    <shiro.version>1.4.0</shiro.version>
+    <mahout.version>0.13.0</mahout.version>
+
   </properties>
 
   <dependencyManagement>
@@ -97,13 +100,6 @@
     </dependency>
 
 
-    <!-- 5)Spring hadoop依赖 -->
-    <!--<dependency>-->
-      <!--<groupId>org.springframework.data</groupId>-->
-      <!--<artifactId>spring-data-hadoop</artifactId>-->
-      <!--<version>2.4.0.RELEASE</version>-->
-    <!--</dependency>-->
-
 
     <dependency>
       <groupId>commons-lang</groupId>
@@ -118,11 +114,11 @@
       <version>${junit.version}</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.springframework.data</groupId>
-      <artifactId>spring-data-redis</artifactId>
-      <version>${spring-redis.version}</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.data</groupId>-->
+      <!--<artifactId>spring-data-redis</artifactId>-->
+      <!--<version>${spring-redis.version}</version>-->
+    <!--</dependency>-->
 
     <!--<dependency>-->
       <!--<groupId>org.slf4j</groupId>-->
@@ -142,6 +138,12 @@
       <version>${slf4j.version}</version>
     </dependency>
 
+    <!--<dependency>-->
+      <!--<groupId>org.slf4j</groupId>-->
+      <!--<artifactId>jcl-over-slf4j</artifactId>-->
+      <!--<version>${slf4j.version}</version>-->
+    <!--</dependency>-->
+
     <dependency>
         <groupId>commons-logging</groupId>
         <artifactId>commons-logging</artifactId>
@@ -154,26 +156,31 @@
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>1.2.3</version>
+        <exclusions>
+          <exclusion>
+            <artifactId>slf4j-api</artifactId>
+            <groupId>org.slf4j</groupId>
+          </exclusion>
+
+          <exclusion>
+            <artifactId>ch.qos.logback</artifactId>
+            <groupId>logback-core</groupId>
+          </exclusion>
+
+        </exclusions>
     </dependency>
 
       <dependency>
           <groupId>org.logback-extensions</groupId>
           <artifactId>logback-ext-spring</artifactId>
-          <version>0.1.4</version>
+          <version>0.1.5</version>
       </dependency>
 
-
       <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>jcl-over-slf4j</artifactId>
-        <version>1.7.24</version>
-    </dependency>
-
-      <dependency>
-      <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-core</artifactId>
-      <version>1.1.7</version>
-    </dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <version>1.2.3</version>
+      </dependency>
 
 
     <dependency>
@@ -234,13 +241,19 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.4</version>
+      <version>2.2</version>
     </dependency>
 
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
       <version>1.3.3</version>
+      <exclusions>
+        <exclusion>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
@@ -259,50 +272,81 @@
     <dependency>
       <groupId>org.apache.mahout</groupId>
       <artifactId>mahout-mr</artifactId>
-      <version>0.13.0</version>
+      <version>${mahout.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>slf4j-api</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
       <groupId>org.apache.mahout</groupId>
       <artifactId>mahout-hdfs</artifactId>
-      <version>0.13.0</version>
+      <version>${mahout.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>slf4j-api</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+
+      </exclusions>
     </dependency>
 
     <dependency>
       <groupId>org.apache.mahout</groupId>
       <artifactId>mahout-math</artifactId>
-      <version>0.13.0</version>
+      <version>${mahout.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>slf4j-api</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+
+      </exclusions>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-math3</artifactId>
+      <version>3.2</version>
+    </dependency>
+
+
+    <!-- shiro -->
 
     <dependency>
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-core</artifactId>
-      <version>1.3.2</version>
+      <version>${shiro.version}</version>
+    </dependency>
+
+
+    <!--<dependency>-->
+      <!--<groupId>org.apache.shiro</groupId>-->
+      <!--<artifactId>shiro-ehcache</artifactId>-->
+      <!--<version>${shiro.version}</version>-->
+    <!--</dependency>-->
+
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-spring</artifactId>
+      <version>${shiro.version}</version>
     </dependency>
 
     <dependency>
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-web</artifactId>
-      <version>1.3.2</version>
+      <version>${shiro.version}</version>
     </dependency>
 
-    <dependency>
-      <groupId>org.apache.shiro</groupId>
-      <artifactId>shiro-ehcache</artifactId>
-      <version>1.3.2</version>
-    </dependency>
 
-    <dependency>
-      <groupId>org.apache.shiro</groupId>
-      <artifactId>shiro-spring</artifactId>
-      <version>1.3.2</version>
-    </dependency>
-
-    <dependency>
-      <groupId>net.sf.ehcache</groupId>
-      <artifactId>ehcache</artifactId>
-      <version>2.10.3</version>
-    </dependency>
+      <!--<dependency>-->
+      <!--<groupId>net.sf.ehcache</groupId>-->
+      <!--<artifactId>ehcache</artifactId>-->
+      <!--<version>2.10.3</version>-->
+    <!--</dependency>-->
 
 
 
@@ -312,24 +356,38 @@
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-client</artifactId>
       <version>${hadoop.version}</version>
+
     </dependency>
 
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
       <version>${hadoop.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>slf4j-api</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-hdfs</artifactId>
       <version>${hadoop.version}</version>
+
     </dependency>
 
     <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-nfs</artifactId>
       <version>${hadoop.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>slf4j-api</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <dependency>
