--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,12 @@
     <slf4j.version>1.7.21</slf4j.version>
     <mybatis-spring.version>1.3.0</mybatis-spring.version>
     <mybatis.version>3.4.4</mybatis.version>
-    <!--<spring-redis.version>1.7.2.RELEASE</spring-redis.version>-->
+    <spring-redis.version>1.7.2.RELEASE</spring-redis.version>
     <pagehelper.version>5.1.2</pagehelper.version>
     <mysql-connector.version>5.1.38</mysql-connector.version>
     <fastjson.version>1.2.17</fastjson.version>
     <c3p0.version>0.9.5.2</c3p0.version>
-    <hadoop.version>2.4.1</hadoop.version>
+    <hadoop.version>2.7.5</hadoop.version>
     <shiro.version>1.4.0</shiro.version>
     <mahout.version>0.13.0</mahout.version>
 
@@ -114,23 +114,23 @@
       <version>${junit.version}</version>
     </dependency>
 
-    <!--<dependency>-->
-      <!--<groupId>org.springframework.data</groupId>-->
-      <!--<artifactId>spring-data-redis</artifactId>-->
-      <!--<version>${spring-redis.version}</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-redis</artifactId>
+      <version>${spring-redis.version}</version>
+    </dependency>
 
-    <!--<dependency>-->
-      <!--<groupId>org.slf4j</groupId>-->
-      <!--<artifactId>slf4j-log4j12</artifactId>-->
-      <!--<version>${slf4j.version}</version>-->
-      <!--<exclusions>-->
-        <!--<exclusion>-->
-          <!--<artifactId>slf4j-api</artifactId>-->
-          <!--<groupId>org.slf4j</groupId>-->
-        <!--</exclusion>-->
-      <!--</exclusions>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>${slf4j.version}</version>
+      <exclusions>
+        <exclusion>
+          <artifactId>slf4j-api</artifactId>
+          <groupId>org.slf4j</groupId>
+        </exclusion>
+      </exclusions>
+    </dependency>
 
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -138,17 +138,17 @@
       <version>${slf4j.version}</version>
     </dependency>
 
-    <!--<dependency>-->
-      <!--<groupId>org.slf4j</groupId>-->
-      <!--<artifactId>jcl-over-slf4j</artifactId>-->
-      <!--<version>${slf4j.version}</version>-->
-    <!--</dependency>-->
-
     <dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging</artifactId>
-        <version>1.2</version>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jcl-over-slf4j</artifactId>
+      <version>${slf4j.version}</version>
     </dependency>
+
+    <!--<dependency>-->
+        <!--<groupId>commons-logging</groupId>-->
+        <!--<artifactId>commons-logging</artifactId>-->
+        <!--<version>1.2</version>-->
+    <!--</dependency>-->
 
 
       <!-- 实现sl4j接口并整合 -->
@@ -160,11 +160,6 @@
           <exclusion>
             <artifactId>slf4j-api</artifactId>
             <groupId>org.slf4j</groupId>
-          </exclusion>
-
-          <exclusion>
-            <artifactId>ch.qos.logback</artifactId>
-            <groupId>logback-core</groupId>
           </exclusion>
 
         </exclusions>
@@ -241,7 +236,7 @@
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.2</version>
+      <version>2.5</version>
     </dependency>
 
     <dependency>
@@ -313,6 +308,40 @@
       <version>3.2</version>
     </dependency>
 
+    <!-- hive -->
+    <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-jdbc</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-exec</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-metastore</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.hive</groupId>
+      <artifactId>hive-service</artifactId>
+      <version>2.2.0</version>
+    </dependency>
+
+
+
+    <!-- sqoop -->
+
+    <dependency>
+      <groupId>org.apache.sqoop</groupId>
+      <artifactId>sqoop-client</artifactId>
+      <version>1.99.7</version>
+    </dependency>
 
     <!-- shiro -->
 
@@ -323,11 +352,11 @@
     </dependency>
 
 
-    <!--<dependency>-->
-      <!--<groupId>org.apache.shiro</groupId>-->
-      <!--<artifactId>shiro-ehcache</artifactId>-->
-      <!--<version>${shiro.version}</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-ehcache</artifactId>
+      <version>${shiro.version}</version>
+    </dependency>
 
     <dependency>
       <groupId>org.apache.shiro</groupId>
@@ -342,11 +371,11 @@
     </dependency>
 
 
-      <!--<dependency>-->
-      <!--<groupId>net.sf.ehcache</groupId>-->
-      <!--<artifactId>ehcache</artifactId>-->
-      <!--<version>2.10.3</version>-->
-    <!--</dependency>-->
+    <dependency>
+      <groupId>net.sf.ehcache</groupId>
+      <artifactId>ehcache</artifactId>
+      <version>2.10.3</version>
+    </dependency>
 
 
 
