--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,9 +15,7 @@
     <context-param>
         <!-- 此处配置的contextConfigLocation配置到了ServletContext中，ServletContext是Context级的 -->
         <param-name>contextConfigLocation</param-name>
-        <param-value>
-            /WEB-INF/confgs/applicationContext.xml
-        </param-value>
+        <param-value>/WEB-INF/confgs/applicationContext.xml,/WEB-INF/confgs/spring-shiro-web.xml</param-value>
     </context-param>
 
     <listener>
@@ -36,7 +34,7 @@
         <init-param>
             <!-- 此处配置的contextConfigLocation配置到了ServletConfig中，ServletConfig是Servlet级的 -->
             <param-name>contextConfigLocation</param-name>
-            <param-value>/WEB-INF/confgs/dispatcher-servlet.xml,/WEB-INF/confgs/spring-shiro-web.xml</param-value>
+            <param-value>/WEB-INF/confgs/dispatcher-servlet.xml</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
@@ -49,14 +47,14 @@
 <!--Stop spring mvc配置 -->
 
 <!--Start logback配置-->
-    <context-param>
-        <param-name>logbackConfigLocation</param-name>
-        <param-value>classpath:logback.xml</param-value>
-    </context-param>
+    <!--<context-param>-->
+        <!--<param-name>logbackConfigLocation</param-name>-->
+        <!--<param-value>/WEB-INF/confgs/logback.xml</param-value>-->
+    <!--</context-param>-->
 
-    <listener>
-        <listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>
-    </listener>
+    <!--<listener>-->
+        <!--<listener-class>ch.qos.logback.ext.spring.web.LogbackConfigListener</listener-class>-->
+    <!--</listener>-->
 <!--Stop logback配置-->
 
     <!--Start 配置过滤器解决乱码 -->
@@ -91,32 +89,28 @@
         <location>/WEB-INF/view/error/500.jsp</location>
     </error-page>
 
-    <!-- 空指针异常 -->
+    <!-- 异常 -->
     <error-page>
         <exception-type>java.lang.Exception</exception-type>
         <location>/WEB-INF/view/error/other.jsp</location>
     </error-page>
 <!--Stop 系统容错处理 -->
-
 <!-- shiro配置 开始 -->
     <filter>
         <filter-name>shiroFilter</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
         <async-supported>true</async-supported>
         <init-param>
-            <param-name>targetFilterLifecycle</param-name>
-            <param-value>true</param-value>
+        <param-name>targetFilterLifecycle</param-name>
+        <param-value>true</param-value>
         </init-param>
     </filter>
 
     <filter-mapping>
         <filter-name>shiroFilter</filter-name>
         <url-pattern>/*</url-pattern>
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
-        <dispatcher>INCLUDE</dispatcher>
-        <dispatcher>ERROR</dispatcher>
     </filter-mapping>
 <!-- shiro配置 结束 -->
+
 
 </web-app>
